--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>Unban Request</h1>
+    <h1>Comedy Night Unban Request</h1>
     <form id="unbanForm">
       <label for="steamId">Steam ID</label>
       <input type="text" id="steamId" name="steamId" placeholder="Enter your Steam ID" required />
       
-      <label for="banReason">Why Were You Banned?</label>
+      <label for="banReason">Enter Your Steam ID</label>
       <textarea id="banReason" name="banReason" placeholder="Explain why you were banned" required></textarea>
       
       <button type="submit">Submit Request</button>
