--- a/snipered007dm.html
+++ b/snipered007dm.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Unban Info</title>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      justify-content: center;
+      align-items: center;
+      background-color: #121212;
+      color: #ffffff;
+      font-size: 1.5rem;
+      text-align: center;
+      padding: 1rem;
+    }
+    a {
+      margin-top: 1rem;
+      color: #00afff;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.2rem;
+    }
+    a:hover {
+      color: #ff0000;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <div>To Get Unbanned, Message <strong>SniperED007</strong> On Discord</div>
+  <a href="https://discord.com/invite/DDdcZh2vVX" target="_blank" rel="noopener noreferrer">
+    Join This Server! https://discord.com/invite/DDdcZh2vVX
+  </a>
+</body>
+</html>
