--- a/snipered007dm.html
+++ b/snipered007dm.html
@@ -19,6 +19,30 @@
       text-align: center;
       padding: 1rem;
     }
+    img {
+      max-width: 250px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+    .caption-container {
+      margin-top: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #ccc;
+      font-weight: 600;
+      font-size: 1.2rem;
+    }
+    .arrow-up {
+      font-size: 2rem;
+      line-height: 1;
+      margin-bottom: 0.2rem;
+      user-select: none;
+    }
+    div.message {
+      margin-top: 1.5rem;
+    }
     a {
       margin-top: 1rem;
       color: #00afff;
@@ -34,7 +58,12 @@
   </style>
 </head>
 <body>
-  <div>To Get Unbanned, Message <strong>SniperED007</strong> On Discord</div>
+  <img src="https://cdn.discordapp.com/attachments/1338661002153037935/1383418421953433691/edwardpointing.jpg?ex=684eb84e&is=684d66ce&hm=bcb2d8c3a6d9dbad6b6607958d28e435f7119c55c911e34aea7c452275a505da&" alt="Edward Pointing" />
+  <div class="caption-container">
+    <div class="arrow-up">↑</div>
+    <div>Edward Dennekamp</div>
+  </div>
+  <div class="message">To Get Unbanned, Message <strong>SniperED007</strong> On Discord</div>
   <a href="https://discord.com/invite/DDdcZh2vVX" target="_blank" rel="noopener noreferrer">
     Join This Server! https://discord.com/invite/DDdcZh2vVX
   </a>
