--- a/snipered007dm.html
+++ b/snipered007dm.html
@@ -20,7 +20,7 @@
       padding: 1rem;
     }
     img {
-      max-width: 250px;
+      max-width: 400px; /* increased from 250px */
       height: auto;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
